--- a/todo/Cargo.toml
+++ b/todo/Cargo.toml
@@ -5,6 +5,7 @@ rmp-serde = "1.3.0"
 serde_json = "1.0"
 uuid = "1.4.1"
 wit-bindgen = "0.36.0"
+base64ct = "=1.6.0"
 
 [dependencies.caller-utils]
 path = "../target/caller-utils"
